layout bug fixed.

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -1460,7 +1460,6 @@ nav .site-nav-logo{
   		.owl-carousel{
   			margin: 40px 0 0 0;
   			.item{
-  				width: 400px;
     			margin: 10px;
     			color: #FFF;
    				-webkit-border-radius: 3px;
@@ -1522,6 +1521,7 @@ nav .site-nav-logo{
   		}
 
   		.w-div-desc-web{
+  			margin-top: 0;
   			background:url("../img/companies.png") left center no-repeat;
   			background-size: 600px 350px;
   			p{
